syntax = "proto3";

package playhouse.protocol;

/*
    *  2byte  header size
    *  3byte  body size
    *  2byte  serviceId
    *  1byte  msgId size
    *  n byte msgId string
    *  2byte  msgSeq
    *  8byte  stageId
    *  2byte  errorCode [only from server]
    *  From Header Size = 2+3+2+1+2+8+2+N = 20 + n
* */


enum BaseErrorCode
{
  // FOR COMMON
  SUCCESS = 0;
  SYSTEM_ERROR = 60001;  
  UNCHECKED_CONTENTS_ERROR = 60002;
  NOT_REGISTERED_MESSAGE = 60003;
  
  //FOR STAGE
  STAGE_TYPE_IS_INVALID = 60101;
  STAGE_IS_NOT_EXIST =  60102;
  ALREADY_EXIST_STAGE = 60103;

  //FOR CLIENT CONNECTOR
  NOT_CONNECTED = 60201;
  REQUEST_TIMEOUT = 60202;
  UNAUTHENTICATED = 60203;
  
}